intTests/test_type_errors/err007.log.good
Loading file "err007.saw"
Type errors:
  err007.saw:2:1-2:4: Error: Type mismatch.
    Expected: TopLevel t.0
    Found:    [Int]

  err007.saw:2:1-2:4: Note: The type TopLevel t.0 arises from this type annotation
  err007.saw:2:1-2:4: Note: The type [Int] arises from the type of this term


FAILED
