intTests/test_type_errors/err007.saw
// This was allowed prior to Dec 2024 and now fails.
[0];
